# splitgal4.org

./: .gitignore  Dockerfile  README.md  backup_db.sh  docker-compose.yml  manage.py  pyproject.toml
members/: forms.py  models.py  urls.py  views.py
members/templates/: activate_account.html  login.html  password_reset.html  pw_forget.html  template_activate_account.html  user_edit.html  user_register.html
splitgal4_lines/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
splitgal4_lines/templates/: base.html  footer.html  index.html  navbar.html  privacy.html  readme.html  remove_line.html  show_detail.html  show_user.html  update_line.html
splitgal4db/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
static/: template.xlsx
upload/: forms.py  urls.py  views.py
upload/templates/: idv_upload.html  preview.html  upload.html
